@@ -3,6 +3,8 @@
 
 - adjusted font-sizes and cut-off width of content.
 
+- only show underline on links when hovering.
+
 - version.pt: moved md5 sum from it's own column to the file column below the
   download link
 
